--- a/DownloadForYoutobe/DownloadForYoutobe.csproj
+++ b/DownloadForYoutobe/DownloadForYoutobe.csproj
@@ -77,6 +77,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="GitHub.pdf" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
