--- a/DownloadForYoutobe/DownloadForYoutobe.csproj
+++ b/DownloadForYoutobe/DownloadForYoutobe.csproj
@@ -108,6 +108,7 @@
   <ItemGroup>
     <None Include="packages.config" />
     <None Include="GitHub.pdf" />
+    <None Include="youtube-dl.pdf" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
